(executable
 (name MLS_JS)
 (modes byte js)
 (modules MLS_JS)
 (js_of_ocaml
   ; Only works when --profile=release is passed.
   ; For release (I think).
   (flags "--disable" "genprim" "--opt" "3")
   ; Flags for debugging what's going on.
   ;(flags "--disable" "genprim" "--opt" "3" "--set" "tc_depth=0" "--pretty" "--disable" "excwrap")
   (javascript_files "overrides.js"))
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries mls.primitives_js fstar.lib integers_stubs_js mls_star mls_test js_of_ocaml))
