(copy_files# src/*)

(library
 (wrapped false)
 (libraries mls_star)
 (name mls_test)
 (modules :standard \
   MLS_Test))

(test
 (libraries fstar.lib mls_star mls_test yojson)
 (modules MLS_Test)
 (name MLS_Test))

(env
  (dev (flags
    :standard
    -safe-string
    -g
    -w -8-9-33-20-21-26-27-39
  ))
  (release (flags
    :standard
    -safe-string
    -g
    -w -8-9-33-20-21-26-27-39
  )))
